# ODBCDetour

./: .gitignore  CMakeLists.txt  CMakePresets.json  OdbcDetour.reg  README.md
src/: CMakeLists.txt  FixedBufferString.h  InfotypeMapping.cpp  Logging.cpp  Logging.h  OdbcDetour.h.in  OdbcDetourAPI.cpp  OdbcDetourAPI.def  Platform.h  Resource.h  Resource.rc  SqlInfoType.cpp  SqlInfoType.h  dllMain.cpp  fragments.cpp
